--- a/spec/dummy/app/stylesheets/back.sass
+++ b/spec/dummy/app/stylesheets/back.sass
@@ -1,5 +1,5 @@
 @import blueprint
 @import partials/back/forms
 
-.variant form.button_to
+.variant form.button_to, #goods form.button_to
 	display: inline-block
