--- a/app/views/manage/goods/index.html.haml
+++ b/app/views/manage/goods/index.html.haml
@@ -1,4 +1,22 @@
+- content_for :javascripts do
+	= javascript_include_tag 'artisan_engine/catalog/tablesorter/jquery.tablesorter.min'
+
+	:javascript
+		$(document).ready( function() {
+			$(".tablesorter").tablesorter(); 
+		});
+
+- content_for :stylesheets do
+	= stylesheet_link_tag 'artisan_engine/catalog/embed/tablesorter/blue/blue'
+
 %h1 Manage Goods
 
-%ol#goods
-	= render @goods
+%table#goods.tablesorter
+	%thead
+		%tr
+			%th SKU
+			%th Name
+			%th
+	
+	%tbody
+		= render @goods
