--- a/app/views/goods/_good.html.haml
+++ b/app/views/goods/_good.html.haml
@@ -1,2 +1,2 @@
 %div[ good ]
-	= link_to good.name, good_path( good )
+	= link_to display_image( good.image, '190x190#' ), good_path( good ), :title => good.name
